# Chess

./: .gitignore  CMakeLists.txt  ChessDev.bat  Main.cpp  README.md  debug_kiwipete.cpp
includes/: Bishop.h  Board.h  Game.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  Square.h
libs/chess_engine/: CMakeLists.txt  README.md
libs/chess_engine/include/chess_engine/: ChessEngine.h  ColorUtil.h  FENString.h  Types.h
libs/chess_engine/includes/: Bishop.h  Board.h  King.h  Knight.h
libs/chess_engine/src/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  ChessEngine.cpp  ColorUtil.cpp  Colors.cpp  FENString.cpp  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Square.cpp  Square.h
libs/chess_engine/tests/: TestManager.cpp  TestManager.h
libs/chess_engine/tests/pawn_tests/two_step_pawn_moves/: Main.cpp
libs/chess_game/: CMakeLists.txt  README.md
libs/chess_game/includes/: Colors.h  Game.h
libs/chess_game/src/: Bishop.cpp  Game.cpp
libs/chess_game/tests/: TestManager.cpp
libs/chess_game/tests/pawn_tests/two_step_pawn_moves/: Main.cpp
src/: Bishop.cpp  Board.cpp  DBoard.cpp  DBoard.h  Game.cpp  Game.h  King.cpp  Knight.cpp  Main.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  Square.cpp
tests/: TestManager.h
tests/pawn_tests/: Main.cpp
tests/pawn_tests/two_step_pawn_moves/: Main.cpp
